# databricks-asset-bundles

./: .gitignore  README.md  databricks.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yaml
azure/: deploy.sh  main.bicep
fixtures/: .gitkeep
resources/: __init__.py  demo_etl.pipeline.yml  demo_etl_pipeline.py  sample_job.job.yml  sample_job.py  sample_viz.dashboard.yml
src/: sample_notebook.ipynb
src/demo/: main.py  spark.py  taxis.py
src/demo_etl/: README.md
src/demo_etl/transformations/: sample_trips_demo.py  sample_trips_demo.sql  sample_zones_demo.py  sample_zones_demo.sql
tests/: conftest.py  sample_taxis_test.py
